--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "dependencies": {
     "@balkangraph/orgchart.js": "^7.1.95",
     "@emotion/core": "^10.0.35",
-    "@react-pdf/renderer": "^2.0.0-beta.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.0",
+    "@react-pdf/renderer": "^2.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",  
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "datatables": "^1.10.18",
+    "dom-to-image": "^2.6.0",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
+    "html-to-pdfmake": "^2.4.22",
     "jquery": "^3.5.1",
+    "jspdf": "^2.5.1",
     "node-sass": "^4.14.1",
+    "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.6.0",
     "react": "^16.12.0",
     "react-c3js": "^0.1.20",
     "react-collapsible": "^2.8.0",
