front-end update

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BACKEND_URL=https://super-worm-shift.cyclic.app/
-REACT_APP_SCRAPER_URL=https://rs-scraperr.onrender.com/
+# REACT_APP_SCRAPER_URL=http://localhost:2000
+REACT_APP_SCRAPER_URL=https://rs-scraper-elbahja.onrender.com/
 SKIP_PREFLIGHT_CHECK=true
